--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,14 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile ~/.gitignore_global
 
+# Ignore Rubymine/IntelliJ IDEA project
+/.idea
+
 # Ignore bundler config
 /.bundle
+
+# Ignore Gemfile.lock
+Gemfile.lock
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
